--- a/index.html
+++ b/index.html
@@ -12,10 +12,7 @@
     <header>
         <p>LIC <i class="fad fa-graduation-cap"></i></p>
         <ul>Guias
-            <li><a href="">Guia #1</a></li>
-            <li class="inactive">Guia #2</li>
-            <li class="inactive">Guia #3</li>
-            <li class="inactive">Guia #4</li>
+            <li><a href="./html/menu.html">Guia #1</a></li>
         </ul>
     </header>
     <section>
