--- a/html/menu.html
+++ b/html/menu.html
@@ -10,7 +10,7 @@
     <div class="elementos">
         <a href="./ejempl 1/calculadora.html">Calculadora</a>
         <a href="./ejemplo2/calculoareas.html">Calculadora de áreas</a>
-        <a href="./ejemplo3/index.html">Ingresar mes y año</a>
+        <a href="./ejemplo2/calculoareas.html">Ingresar mes y año</a>
         <a href="./temperaturas/index.html">Ejercicio de temperaturas</a>
         <a href="./jsnoinvasivo/index.html">Javascript no invasivo</a>
         <a href="./nullandundefined/index.html">Ejemplo de archivos Null y Undefined</a>
