--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <p>LIC <i class="fad fa-graduation-cap"></i></p>
         <ul>Guias
             <li><a href="./html/menu.html">Guia #1</a></li>
+            <li><a href="./html/menu2.html">Guia #2</a></li>
         </ul>
     </header>
     <section>
