--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <ul>Guias
             <li><a href="./html/menu.html">Guia #1</a></li>
             <li><a href="./html/menu2.html">Guia #2</a></li>
+            <li><a href="./html/menu3.html">Guia #3</a></li>
         </ul>
     </header>
     <section>
