--- a/html/guia8/ejercicios/from/form.html
+++ b/html/guia8/ejercicios/from/form.html
@@ -9,7 +9,7 @@
 <body>
 
 <div>
-  <form action="/action_page.php">
+  <form action="#">
     <label for="fname">Nombre</label>
     <input type="text" id="nombre" name="firstname" placeholder="Nombre">
 
